dfir_rs/tests/compile-fail/stable/surface_defer_iteration_lazy_outside_loop.stderr
error: Operator `defer_iteration_lazy(...)` must be within a `loop { ... }` context.
 --> tests/compile-fail/stable/surface_defer_iteration_lazy_outside_loop.rs:3:31
  |
3 |         source_iter(0..10) -> defer_iteration_lazy() -> null();
  |                               ^^^^^^^^^^^^^^^^^^^^
